--- a/main/project/webpage.css
+++ b/main/project/webpage.css
@@ -857,6 +857,26 @@ video {
   height: 100svh;
 }
 
+.h-\[\] {
+  height: ;
+}
+
+.h-\[80px\] {
+  height: 80px;
+}
+
+.h-\[0px\] {
+  height: 0px;
+}
+
+.h-\[120px\] {
+  height: 120px;
+}
+
+.h-\[140px\] {
+  height: 140px;
+}
+
 .max-h-\[1300px\] {
   max-height: 1300px;
 }
@@ -970,6 +990,22 @@ video {
   width: 100vw;
 }
 
+.w-\[\] {
+  width: ;
+}
+
+.w-\[90\] {
+  width: 90;
+}
+
+.w-\[80px\] {
+  width: 80px;
+}
+
+.w-\[140px\] {
+  width: 140px;
+}
+
 .max-w-\[480px\] {
   max-width: 480px;
 }
@@ -1018,10 +1054,6 @@ video {
 
 .grid-cols-3 {
   grid-template-columns: repeat(3, minmax(0, 1fr));
-}
-
-.grid-cols-4 {
-  grid-template-columns: repeat(4, minmax(0, 1fr));
 }
 
 .grid-rows-1 {
@@ -1110,26 +1142,6 @@ video {
 
 .gap-\[10\%\] {
   gap: 10%;
-}
-
-.gap-\[20\%\] {
-  gap: 20%;
-}
-
-.gap-\[20px\] {
-  gap: 20px;
-}
-
-.gap-\[1-\] {
-  gap: 1-;
-}
-
-.gap-\[5\%\] {
-  gap: 5%;
-}
-
-.gap-\[\%\] {
-  gap: %;
 }
 
 .gap-x-6 {
@@ -1423,6 +1435,11 @@ video {
 
 .bg-no-repeat {
   background-repeat: no-repeat;
+}
+
+.object-contain {
+  -o-object-fit: contain;
+     object-fit: contain;
 }
 
 .object-cover {
@@ -2048,19 +2065,9 @@ video {
   left: 0px;
 }
 
-.before\:left-2::before {
-  content: var(--tw-content);
-  left: 0.5rem;
-}
-
 .before\:top-0::before {
   content: var(--tw-content);
   top: 0px;
-}
-
-.before\:top-2::before {
-  content: var(--tw-content);
-  top: 0.5rem;
 }
 
 .before\:top-3::before {
@@ -2108,6 +2115,21 @@ video {
   height: 100%;
 }
 
+.before\:h-\[120px\]::before {
+  content: var(--tw-content);
+  height: 120px;
+}
+
+.before\:h-\[\]::before {
+  content: var(--tw-content);
+  height: ;
+}
+
+.before\:h-\[60px\]::before {
+  content: var(--tw-content);
+  height: 60px;
+}
+
 .before\:w-1\/12::before {
   content: var(--tw-content);
   width: 8.333333%;
@@ -2126,6 +2148,21 @@ video {
 .before\:w-full::before {
   content: var(--tw-content);
   width: 100%;
+}
+
+.before\:w-\[\]::before {
+  content: var(--tw-content);
+  width: ;
+}
+
+.before\:w-\[60px\]::before {
+  content: var(--tw-content);
+  width: 60px;
+}
+
+.before\:w-\[120px\]::before {
+  content: var(--tw-content);
+  width: 120px;
 }
 
 .before\:translate-x-full::before {
@@ -2188,8 +2225,18 @@ video {
   content: var(--tw-content);
 }
 
-.before\:content-\[\'90\%\'\]::before {
-  --tw-content: '90%';
+.before\:content-\[\'0\%\'\]::before {
+  --tw-content: '0%';
+  content: var(--tw-content);
+}
+
+.before\:content-\[\'20\%\'\]::before {
+  --tw-content: '20%';
+  content: var(--tw-content);
+}
+
+.before\:content-\[\'50\%\'\]::before {
+  --tw-content: '50%';
   content: var(--tw-content);
 }
 
@@ -2203,18 +2250,8 @@ video {
   content: var(--tw-content);
 }
 
-.before\:content-\[\'50\%\'\]::before {
-  --tw-content: '50%';
-  content: var(--tw-content);
-}
-
-.before\:content-\[\'0\%\'\]::before {
-  --tw-content: '0%';
-  content: var(--tw-content);
-}
-
-.before\:content-\[\'20\%\'\]::before {
-  --tw-content: '20%';
+.before\:content-\[\'90\%\'\]::before {
+  --tw-content: '90%';
   content: var(--tw-content);
 }
 
@@ -2419,10 +2456,6 @@ video {
 }
 
 @media (min-width: 640px) {
-  .sm\:grid {
-    display: grid;
-  }
-
   .sm\:grid-cols-2 {
     grid-template-columns: repeat(2, minmax(0, 1fr));
   }
@@ -2430,6 +2463,21 @@ video {
   .sm\:text-2xl {
     font-size: 1.5rem;
     line-height: 2rem;
+  }
+
+  .sm\:text-3xl {
+    font-size: 1.875rem;
+    line-height: 2.25rem;
+  }
+
+  .sm\:text-4xl {
+    font-size: 2.25rem;
+    line-height: 2.5rem;
+  }
+
+  .sm\:text-5xl {
+    font-size: 3rem;
+    line-height: 1;
   }
 }
 
@@ -2446,16 +2494,32 @@ video {
     display: flex;
   }
 
-  .md\:grid {
-    display: grid;
-  }
-
   .md\:h-\[120svh\] {
     height: 120svh;
   }
 
+  .md\:h-\[\] {
+    height: ;
+  }
+
+  .md\:h-\[150px\] {
+    height: 150px;
+  }
+
   .md\:max-h-\[1200px\] {
     max-height: 1200px;
+  }
+
+  .md\:w-\[200px\] {
+    width: 200px;
+  }
+
+  .md\:w-\[150\] {
+    width: 150;
+  }
+
+  .md\:w-\[150px\] {
+    width: 150px;
   }
 
   .md\:shrink-0 {
@@ -2466,12 +2530,12 @@ video {
     grid-template-columns: repeat(3, minmax(0, 1fr));
   }
 
-  .md\:grid-rows-2 {
-    grid-template-rows: repeat(2, minmax(0, 1fr));
+  .md\:grid-cols-4 {
+    grid-template-columns: repeat(4, minmax(0, 1fr));
   }
 
-  .md\:grid-rows-4 {
-    grid-template-rows: repeat(4, minmax(0, 1fr));
+  .md\:grid-rows-2 {
+    grid-template-rows: repeat(2, minmax(0, 1fr));
   }
 
   .md\:flex-row {
@@ -2488,6 +2552,10 @@ video {
 
   .md\:gap-\[10\%\] {
     gap: 10%;
+  }
+
+  .md\:text-pretty {
+    text-wrap: pretty;
   }
 
   .md\:rounded-full {
@@ -2550,12 +2618,92 @@ video {
     line-height: 1;
   }
 
+  .md\:text-xl {
+    font-size: 1.25rem;
+    line-height: 1.75rem;
+  }
+
+  .md\:text-lg {
+    font-size: 1.125rem;
+    line-height: 1.75rem;
+  }
+
+  .md\:text-xs {
+    font-size: 0.75rem;
+    line-height: 1rem;
+  }
+
+  .md\:text-sm {
+    font-size: 0.875rem;
+    line-height: 1.25rem;
+  }
+
+  .md\:text-\[15px\] {
+    font-size: 15px;
+  }
+
+  .md\:text-\[16px\] {
+    font-size: 16px;
+  }
+
+  .md\:text-\[17px\] {
+    font-size: 17px;
+  }
+
+  .md\:text-\[1px\] {
+    font-size: 1px;
+  }
+
+  .md\:text-6xl {
+    font-size: 3.75rem;
+    line-height: 1;
+  }
+
   .md\:font-bold {
     font-weight: 700;
   }
 
+  .md\:text-\[\] {
+    color: ;
+  }
+
   .md\:text-opacity-100 {
     --tw-text-opacity: 1;
+  }
+
+  .md\:before\:h-\[180px\]::before {
+    content: var(--tw-content);
+    height: 180px;
+  }
+
+  .md\:before\:h-\[120px\]::before {
+    content: var(--tw-content);
+    height: 120px;
+  }
+
+  .md\:before\:h-\[130px\]::before {
+    content: var(--tw-content);
+    height: 130px;
+  }
+
+  .md\:before\:w-\[180px\]::before {
+    content: var(--tw-content);
+    width: 180px;
+  }
+
+  .md\:before\:w-\[10px\]::before {
+    content: var(--tw-content);
+    width: 10px;
+  }
+
+  .md\:before\:w-\[120px\]::before {
+    content: var(--tw-content);
+    width: 120px;
+  }
+
+  .md\:before\:w-\[130px\]::before {
+    content: var(--tw-content);
+    width: 130px;
   }
 }
 
@@ -2568,8 +2716,16 @@ video {
     height: calc(100vh - 90px);
   }
 
+  .lg\:h-\[200px\] {
+    height: 200px;
+  }
+
   .lg\:w-\[80\%\] {
     width: 80%;
+  }
+
+  .lg\:w-\[200px\] {
+    width: 200px;
   }
 
   .lg\:grid-cols-4 {
@@ -2618,6 +2774,21 @@ video {
   .lg\:before\:-left-10::before {
     content: var(--tw-content);
     left: -2.5rem;
+  }
+
+  .lg\:before\:h-\[120px\]::before {
+    content: var(--tw-content);
+    height: 120px;
+  }
+
+  .lg\:before\:h-\[180px\]::before {
+    content: var(--tw-content);
+    height: 180px;
+  }
+
+  .lg\:before\:w-\[180px\]::before {
+    content: var(--tw-content);
+    width: 180px;
   }
 
   .lg\:after\:bg-yellow-400::after {
