about section  continue..

--- a/main/input.css
+++ b/main/input.css
@@ -85,7 +85,7 @@
     }
 
     .grad {
-        background-image: conic-gradient(#FACC15, var(--p), #0F172A 20%);
+        background-image: conic-gradient(#FACC15, var(--p), #1a2131 20%);
        
     }
 }
