--- a/main/project/webpage.css
+++ b/main/project/webpage.css
@@ -554,40 +554,6 @@ video {
   --tw-contain-style:  ;
 }
 
-.container {
-  width: 100%;
-}
-
-@media (min-width: 640px) {
-  .container {
-    max-width: 640px;
-  }
-}
-
-@media (min-width: 768px) {
-  .container {
-    max-width: 768px;
-  }
-}
-
-@media (min-width: 1024px) {
-  .container {
-    max-width: 1024px;
-  }
-}
-
-@media (min-width: 1280px) {
-  .container {
-    max-width: 1280px;
-  }
-}
-
-@media (min-width: 1536px) {
-  .container {
-    max-width: 1536px;
-  }
-}
-
 .fixed {
   position: fixed;
 }
@@ -598,6 +564,14 @@ video {
 
 .relative {
   position: relative;
+}
+
+.-left-12 {
+  left: -3rem;
+}
+
+.-left-16 {
+  left: -4rem;
 }
 
 .bottom-0 {
@@ -648,64 +622,20 @@ video {
   top: 0px;
 }
 
+.top-2 {
+  top: 0.5rem;
+}
+
 .top-5 {
   top: 1.25rem;
 }
 
-.-left-10 {
-  left: -2.5rem;
+.-z-40 {
+  z-index: -40;
 }
 
-.left-8 {
-  left: 2rem;
-}
-
-.left-1 {
-  left: 0.25rem;
-}
-
-.left-16 {
-  left: 4rem;
-}
-
-.-left-1 {
-  left: -0.25rem;
-}
-
-.-left-12 {
-  left: -3rem;
-}
-
-.-left-14 {
-  left: -3.5rem;
-}
-
-.left-0 {
-  left: 0px;
-}
-
-.-left-0 {
-  left: -0px;
-}
-
-.top-10 {
-  top: 2.5rem;
-}
-
-.top-3 {
-  top: 0.75rem;
-}
-
-.-left-6 {
-  left: -1.5rem;
-}
-
-.-left-16 {
-  left: -4rem;
-}
-
-.top-2 {
-  top: 0.5rem;
+.-z-50 {
+  z-index: -50;
 }
 
 .z-10 {
@@ -718,30 +648,6 @@ video {
 
 .z-50 {
   z-index: 50;
-}
-
-.-z-10 {
-  z-index: -10;
-}
-
-.z-0 {
-  z-index: 0;
-}
-
-.-z-50 {
-  z-index: -50;
-}
-
-.-z-0 {
-  z-index: 0;
-}
-
-.z-40 {
-  z-index: 40;
-}
-
-.-z-40 {
-  z-index: -40;
 }
 
 .col-start-1 {
@@ -776,8 +682,8 @@ video {
   margin: auto;
 }
 
-.m-\[100px\] {
-  margin: 100px;
+.m-10 {
+  margin: 2.5rem;
 }
 
 .mx-4 {
@@ -813,16 +719,6 @@ video {
 .my-auto {
   margin-top: auto;
   margin-bottom: auto;
-}
-
-.my-7 {
-  margin-top: 1.75rem;
-  margin-bottom: 1.75rem;
-}
-
-.my-1 {
-  margin-top: 0.25rem;
-  margin-bottom: 0.25rem;
 }
 
 .mb-10 {
@@ -889,8 +785,12 @@ video {
   margin-top: 2rem;
 }
 
-.mt-\[100px\] {
-  margin-top: 100px;
+.mb-1 {
+  margin-bottom: 0.25rem;
+}
+
+.mb-14 {
+  margin-bottom: 3.5rem;
 }
 
 .inline-block {
@@ -931,6 +831,10 @@ video {
 
 .h-4\/5 {
   height: 80%;
+}
+
+.h-40 {
+  height: 10rem;
 }
 
 .h-8 {
@@ -995,34 +899,6 @@ video {
 
 .h-svh {
   height: 100svh;
-}
-
-.h-1 {
-  height: 0.25rem;
-}
-
-.h-10 {
-  height: 2.5rem;
-}
-
-.h-4 {
-  height: 1rem;
-}
-
-.h-48 {
-  height: 12rem;
-}
-
-.h-3 {
-  height: 0.75rem;
-}
-
-.h-32 {
-  height: 8rem;
-}
-
-.h-40 {
-  height: 10rem;
 }
 
 .max-h-\[1300px\] {
@@ -1138,44 +1014,12 @@ video {
   width: 100vw;
 }
 
-.w-1 {
-  width: 0.25rem;
-}
-
-.w-2 {
-  width: 0.5rem;
-}
-
-.w-4 {
-  width: 1rem;
-}
-
-.w-4\/5 {
-  width: 80%;
-}
-
-.w-\[\] {
-  width: ;
-}
-
-.min-w-full {
-  min-width: 100%;
-}
-
 .max-w-\[480px\] {
   max-width: 480px;
 }
 
 .max-w-\[90\%\] {
   max-width: 90%;
-}
-
-.max-w-full {
-  max-width: 100%;
-}
-
-.max-w-sm {
-  max-width: 24rem;
 }
 
 @keyframes bounce {
@@ -1504,6 +1348,11 @@ video {
   background-color: rgb(249 250 251 / var(--tw-bg-opacity));
 }
 
+.bg-gray-800 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(31 41 55 / var(--tw-bg-opacity));
+}
+
 .bg-gray-900 {
   --tw-bg-opacity: 1;
   background-color: rgb(17 24 39 / var(--tw-bg-opacity));
@@ -1569,21 +1418,6 @@ video {
   background-color: rgb(250 204 21 / var(--tw-bg-opacity));
 }
 
-.bg-gray-500 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(107 114 128 / var(--tw-bg-opacity));
-}
-
-.bg-gray-600 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(75 85 99 / var(--tw-bg-opacity));
-}
-
-.bg-gray-800 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(31 41 55 / var(--tw-bg-opacity));
-}
-
 .bg-opacity-60 {
   --tw-bg-opacity: 0.6;
 }
@@ -1602,10 +1436,6 @@ video {
 
 .bg-\[url\(\'\.\/image\/image_2\.avif\'\)\] {
   background-image: url('./image/image_2.avif');
-}
-
-.bg-none {
-  background-image: none;
 }
 
 .bg-cover {
@@ -1627,6 +1457,10 @@ video {
 
 .p-1 {
   padding: 0.25rem;
+}
+
+.p-10 {
+  padding: 2.5rem;
 }
 
 .p-16 {
@@ -1655,10 +1489,6 @@ video {
 
 .p-8 {
   padding: 2rem;
-}
-
-.p-10 {
-  padding: 2.5rem;
 }
 
 .px-1 {
@@ -1753,6 +1583,10 @@ video {
   padding-bottom: 2rem;
 }
 
+.pl-10 {
+  padding-left: 2.5rem;
+}
+
 .pl-4 {
   padding-left: 1rem;
 }
@@ -1767,10 +1601,6 @@ video {
 
 .pt-4 {
   padding-top: 1rem;
-}
-
-.pl-10 {
-  padding-left: 2.5rem;
 }
 
 .text-center {
@@ -1863,11 +1693,6 @@ video {
 .text-xl {
   font-size: 1.25rem;
   line-height: 1.75rem;
-}
-
-.text-xs {
-  font-size: 0.75rem;
-  line-height: 1rem;
 }
 
 .font-bold {
@@ -2241,6 +2066,11 @@ video {
   position: absolute;
 }
 
+.before\:-left-0::before {
+  content: var(--tw-content);
+  left: -0px;
+}
+
 .before\:-left-20::before {
   content: var(--tw-content);
   left: -5rem;
@@ -2271,34 +2101,9 @@ video {
   top: 1.5rem;
 }
 
-.before\:left-10::before {
-  content: var(--tw-content);
-  left: 2.5rem;
-}
-
-.before\:-left-10::before {
-  content: var(--tw-content);
-  left: -2.5rem;
-}
-
-.before\:-left-8::before {
-  content: var(--tw-content);
-  left: -2rem;
-}
-
-.before\:-left-0::before {
-  content: var(--tw-content);
-  left: -0px;
-}
-
 .before\:z-50::before {
   content: var(--tw-content);
   z-index: 50;
-}
-
-.before\:-z-50::before {
-  content: var(--tw-content);
-  z-index: -50;
 }
 
 .before\:m-auto::before {
@@ -2331,11 +2136,6 @@ video {
   height: 100%;
 }
 
-.before\:w-1::before {
-  content: var(--tw-content);
-  width: 0.25rem;
-}
-
 .before\:w-1\/12::before {
   content: var(--tw-content);
   width: 8.333333%;
@@ -2346,6 +2146,11 @@ video {
   width: 100px;
 }
 
+.before\:w-\[1px\]::before {
+  content: var(--tw-content);
+  width: 1px;
+}
+
 .before\:w-\[8\%\]::before {
   content: var(--tw-content);
   width: 8%;
@@ -2354,21 +2159,6 @@ video {
 .before\:w-full::before {
   content: var(--tw-content);
   width: 100%;
-}
-
-.before\:w-0::before {
-  content: var(--tw-content);
-  width: 0px;
-}
-
-.before\:w-\[1\]::before {
-  content: var(--tw-content);
-  width: 1;
-}
-
-.before\:w-\[1px\]::before {
-  content: var(--tw-content);
-  width: 1px;
 }
 
 .before\:translate-x-full::before {
@@ -2397,6 +2187,12 @@ video {
   border-radius: 0.75rem;
 }
 
+.before\:bg-gray-500::before {
+  content: var(--tw-content);
+  --tw-bg-opacity: 1;
+  background-color: rgb(107 114 128 / var(--tw-bg-opacity));
+}
+
 .before\:bg-slate-900::before {
   content: var(--tw-content);
   --tw-bg-opacity: 1;
@@ -2413,30 +2209,6 @@ video {
   content: var(--tw-content);
   --tw-bg-opacity: 1;
   background-color: rgb(250 204 21 / var(--tw-bg-opacity));
-}
-
-.before\:bg-slate-50::before {
-  content: var(--tw-content);
-  --tw-bg-opacity: 1;
-  background-color: rgb(248 250 252 / var(--tw-bg-opacity));
-}
-
-.before\:bg-gray-50::before {
-  content: var(--tw-content);
-  --tw-bg-opacity: 1;
-  background-color: rgb(249 250 251 / var(--tw-bg-opacity));
-}
-
-.before\:bg-gray-500::before {
-  content: var(--tw-content);
-  --tw-bg-opacity: 1;
-  background-color: rgb(107 114 128 / var(--tw-bg-opacity));
-}
-
-.before\:text-red-300::before {
-  content: var(--tw-content);
-  --tw-text-opacity: 1;
-  color: rgb(252 165 165 / var(--tw-text-opacity));
 }
 
 .before\:text-white::before {
@@ -2742,10 +2514,6 @@ video {
     grid-template-columns: repeat(4, minmax(0, 1fr));
   }
 
-  .md\:grid-cols-2 {
-    grid-template-columns: repeat(2, minmax(0, 1fr));
-  }
-
   .md\:grid-rows-2 {
     grid-template-rows: repeat(2, minmax(0, 1fr));
   }
@@ -2855,11 +2623,6 @@ video {
 }
 
 @media (min-width: 1024px) {
-  .lg\:my-auto {
-    margin-top: auto;
-    margin-bottom: auto;
-  }
-
   .lg\:ml-10 {
     margin-left: 2.5rem;
   }
@@ -2872,16 +2635,16 @@ video {
     width: 80%;
   }
 
+  .lg\:grid-cols-2 {
+    grid-template-columns: repeat(2, minmax(0, 1fr));
+  }
+
   .lg\:grid-cols-4 {
     grid-template-columns: repeat(4, minmax(0, 1fr));
   }
 
   .lg\:grid-cols-\[45\%_55\%\] {
     grid-template-columns: 45% 55%;
-  }
-
-  .lg\:grid-cols-2 {
-    grid-template-columns: repeat(2, minmax(0, 1fr));
   }
 
   .lg\:grid-rows-1 {
