--- a/main/project/webpage.css
+++ b/main/project/webpage.css
@@ -630,6 +630,46 @@ video {
   top: 1.25rem;
 }
 
+.-left-1 {
+  left: -0.25rem;
+}
+
+.-left-14 {
+  left: -3.5rem;
+}
+
+.-left-1\/3 {
+  left: -33.333333%;
+}
+
+.top-3 {
+  top: 0.75rem;
+}
+
+.top-1 {
+  top: 0.25rem;
+}
+
+.top-\[\] {
+  top: ;
+}
+
+.top-\[1px\] {
+  top: 1px;
+}
+
+.top-\[10px\] {
+  top: 10px;
+}
+
+.top-\[5px\] {
+  top: 5px;
+}
+
+.top-\[2px\] {
+  top: 2px;
+}
+
 .-z-40 {
   z-index: -40;
 }
@@ -682,10 +722,6 @@ video {
   margin: auto;
 }
 
-.m-10 {
-  margin: 2.5rem;
-}
-
 .mx-4 {
   margin-left: 1rem;
   margin-right: 1rem;
@@ -727,6 +763,10 @@ video {
 
 .mb-12 {
   margin-bottom: 3rem;
+}
+
+.mb-14 {
+  margin-bottom: 3.5rem;
 }
 
 .mb-2 {
@@ -785,12 +825,8 @@ video {
   margin-top: 2rem;
 }
 
-.mb-1 {
-  margin-bottom: 0.25rem;
-}
-
-.mb-14 {
-  margin-bottom: 3.5rem;
+.mb-32 {
+  margin-bottom: 8rem;
 }
 
 .inline-block {
@@ -899,6 +935,14 @@ video {
 
 .h-svh {
   height: 100svh;
+}
+
+.h-7 {
+  height: 1.75rem;
+}
+
+.h-10 {
+  height: 2.5rem;
 }
 
 .max-h-\[1300px\] {
@@ -1078,6 +1122,10 @@ video {
 
 .grid-rows-\[70\%_30\%\] {
   grid-template-rows: 70% 30%;
+}
+
+.flex-row {
+  flex-direction: row;
 }
 
 .flex-col {
@@ -1571,6 +1619,11 @@ video {
   padding-bottom: 2rem;
 }
 
+.px-3 {
+  padding-left: 0.75rem;
+  padding-right: 0.75rem;
+}
+
 .pb-20 {
   padding-bottom: 5rem;
 }
@@ -1603,12 +1656,24 @@ video {
   padding-top: 1rem;
 }
 
+.pl-5 {
+  padding-left: 1.25rem;
+}
+
+.pl-9 {
+  padding-left: 2.25rem;
+}
+
 .text-center {
   text-align: center;
 }
 
 .text-justify {
   text-align: justify;
+}
+
+.text-end {
+  text-align: end;
 }
 
 .font-\[mono\] {
@@ -1701,6 +1766,10 @@ video {
 
 .font-semibold {
   font-weight: 600;
+}
+
+.font-thin {
+  font-weight: 100;
 }
 
 .uppercase {
@@ -2116,6 +2185,11 @@ video {
   display: flex;
 }
 
+.before\:hidden::before {
+  content: var(--tw-content);
+  display: none;
+}
+
 .before\:h-2::before {
   content: var(--tw-content);
   height: 0.5rem;
@@ -2175,6 +2249,11 @@ video {
 .before\:justify-center::before {
   content: var(--tw-content);
   justify-content: center;
+}
+
+.before\:overflow-hidden::before {
+  content: var(--tw-content);
+  overflow: hidden;
 }
 
 .before\:rounded-full::before {
@@ -2457,6 +2536,26 @@ video {
   }
 }
 
+@media not all and (min-width: 640px) {
+  .max-sm\:left-5 {
+    left: 1.25rem;
+  }
+
+  .max-sm\:left-0 {
+    left: 0px;
+  }
+
+  .max-sm\:text-sm {
+    font-size: 0.875rem;
+    line-height: 1.25rem;
+  }
+
+  .max-sm\:before\:hidden::before {
+    content: var(--tw-content);
+    display: none;
+  }
+}
+
 @media (min-width: 640px) {
   .sm\:grid-cols-2 {
     grid-template-columns: repeat(2, minmax(0, 1fr));
@@ -2471,6 +2570,16 @@ video {
     font-size: 3rem;
     line-height: 1;
   }
+
+  .sm\:text-7xl {
+    font-size: 4.5rem;
+    line-height: 1;
+  }
+
+  .sm\:before\:hidden::before {
+    content: var(--tw-content);
+    display: none;
+  }
 }
 
 @media (min-width: 768px) {
@@ -2478,8 +2587,29 @@ video {
     left: 3rem;
   }
 
+  .md\:-left-16 {
+    left: -4rem;
+  }
+
+  .md\:top-0 {
+    top: 0px;
+  }
+
+  .md\:left-10 {
+    left: 2.5rem;
+  }
+
   .md\:m-0 {
     margin: 0px;
+  }
+
+  .md\:my-10 {
+    margin-top: 2.5rem;
+    margin-bottom: 2.5rem;
+  }
+
+  .md\:mb-14 {
+    margin-bottom: 3.5rem;
   }
 
   .md\:flex {
@@ -2492,6 +2622,14 @@ video {
 
   .md\:h-\[140px\] {
     height: 140px;
+  }
+
+  .md\:h-40 {
+    height: 10rem;
+  }
+
+  .md\:h-svh {
+    height: 100svh;
   }
 
   .md\:max-h-\[1200px\] {
@@ -2514,6 +2652,10 @@ video {
     grid-template-columns: repeat(4, minmax(0, 1fr));
   }
 
+  .md\:grid-cols-2 {
+    grid-template-columns: repeat(2, minmax(0, 1fr));
+  }
+
   .md\:grid-rows-2 {
     grid-template-rows: repeat(2, minmax(0, 1fr));
   }
@@ -2532,6 +2674,10 @@ video {
 
   .md\:gap-\[10\%\] {
     gap: 10%;
+  }
+
+  .md\:gap-0 {
+    gap: 0px;
   }
 
   .md\:rounded-full {
@@ -2564,6 +2710,20 @@ video {
   .md\:py-8 {
     padding-top: 2rem;
     padding-bottom: 2rem;
+  }
+
+  .md\:py-3 {
+    padding-top: 0.75rem;
+    padding-bottom: 0.75rem;
+  }
+
+  .md\:px-6 {
+    padding-left: 1.5rem;
+    padding-right: 1.5rem;
+  }
+
+  .md\:pl-10 {
+    padding-left: 2.5rem;
   }
 
   .md\:font-sans {
@@ -2603,12 +2763,58 @@ video {
     font-size: 17px;
   }
 
+  .md\:text-xl {
+    font-size: 1.25rem;
+    line-height: 1.75rem;
+  }
+
+  .md\:text-lg {
+    font-size: 1.125rem;
+    line-height: 1.75rem;
+  }
+
+  .md\:text-\[16px\] {
+    font-size: 16px;
+  }
+
+  .md\:text-7xl {
+    font-size: 4.5rem;
+    line-height: 1;
+  }
+
+  .md\:text-8xl {
+    font-size: 6rem;
+    line-height: 1;
+  }
+
+  .md\:text-\[32px\] {
+    font-size: 32px;
+  }
+
+  .md\:text-\[50px\] {
+    font-size: 50px;
+  }
+
+  .md\:text-2xl {
+    font-size: 1.5rem;
+    line-height: 2rem;
+  }
+
   .md\:font-bold {
     font-weight: 700;
   }
 
+  .md\:text-\[\] {
+    color: ;
+  }
+
   .md\:text-opacity-100 {
     --tw-text-opacity: 1;
+  }
+
+  .md\:before\:hidden::before {
+    content: var(--tw-content);
+    display: none;
   }
 
   .before\:md\:h-\[120px\]::before {
@@ -2623,6 +2829,10 @@ video {
 }
 
 @media (min-width: 1024px) {
+  .lg\:m-0 {
+    margin: 0px;
+  }
+
   .lg\:ml-10 {
     margin-left: 2.5rem;
   }
@@ -2655,6 +2865,10 @@ video {
     grid-template-rows: repeat(2, minmax(0, 1fr));
   }
 
+  .lg\:flex-row {
+    flex-direction: row;
+  }
+
   .lg\:items-start {
     align-items: flex-start;
   }
@@ -2682,6 +2896,15 @@ video {
     line-height: 1.75rem;
   }
 
+  .lg\:text-9xl {
+    font-size: 8rem;
+    line-height: 1;
+  }
+
+  .lg\:text-\[50px\] {
+    font-size: 50px;
+  }
+
   .lg\:before\:-left-10::before {
     content: var(--tw-content);
     left: -2.5rem;
@@ -2697,5 +2920,10 @@ video {
 @media (min-width: 1280px) {
   .xl\:ml-20 {
     margin-left: 5rem;
+  }
+
+  .xl\:before\:hidden::before {
+    content: var(--tw-content);
+    display: none;
   }
 }
